src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>gaconnector_Location_approx__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=loc:&quot; &amp;  gaconnector_Latitude_from_IP__c  &amp; &quot;,&quot; &amp; gaconnector_Longitude__c, &quot;Open in Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location (approx.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Number_of_Website_Visits__c</fullName>
        <label>Number of Website Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Pages_visited__c</fullName>
        <label>Pages visited</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website__c</fullName>
        <label>Time Spent on Website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website_formul__c</fullName>
        <formula>TEXT(ROUND(gaconnector_Time_Spent_on_Website__c / 60000,0)) &amp; &quot;:&quot; &amp; 
 TEXT(MOD(ROUND(gaconnector_Time_Spent_on_Website__c / 1000,0), 60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent on Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Rating__c</fullName>
        <label>Infer: Behavior Score [1-4]</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Score__c</fullName>
        <label>Infer: Behavior Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Updated__c</fullName>
        <label>Infer: Behavior Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>infer3__Encoded_Rating__c</fullName>
        <formula>RPAD(&apos;4&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;4&apos;)+RPAD(&apos;3&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;3&apos;)+RPAD(&apos;2&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c,&apos;2&apos;)+RPAD(&apos;1&apos;,101-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c,&apos;1&apos;)</formula>
        <label>Infer Encoded Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Converted_to_Opp__c</fullName>
        <description>True if this lead was converted into an opportunity.</description>
        <formula>NOT(ISBLANK(ConvertedOpportunityId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if this lead was converted into an opportunity.</inlineHelpText>
        <label>Infer: Converted to Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Personas__c</fullName>
        <label>Infer: Profiles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Profiles_Short__c</fullName>
        <label>Infer: Profiles (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Rating__c</fullName>
        <formula>TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/255),0,infer3__Score_Object_ID__r.infer3__Rating_0__c,1,infer3__Score_Object_ID__r.infer3__Rating_1__c,2,infer3__Score_Object_ID__r.infer3__Rating_2__c,3,infer3__Score_Object_ID__r.infer3__Rating_3__c,4,infer3__Score_Object_ID__r.infer3__Rating_4__c,5,infer3__Score_Object_ID__r.infer3__Rating_5__c,6,infer3__Score_Object_ID__r.infer3__Rating_6__c,null),1+MOD(infer3__Score_Index__c,255),1),&apos;^&apos;,&apos; &apos;))</formula>
        <label>Infer: Fit Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Score__c</fullName>
        <formula>VALUE(TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/85),0,infer3__Score_Object_ID__r.infer3__Score_0__c,1,infer3__Score_Object_ID__r.infer3__Score_1__c,2,infer3__Score_Object_ID__r.infer3__Score_2__c,3,infer3__Score_Object_ID__r.infer3__Score_3__c,4,infer3__Score_Object_ID__r.infer3__Score_4__c,5,infer3__Score_Object_ID__r.infer3__Score_5__c,6,infer3__Score_Object_ID__r.infer3__Score_6__c,7,infer3__Score_Object_ID__r.infer3__Score_7__c,8,infer3__Score_Object_ID__r.infer3__Score_8__c,9,infer3__Score_Object_ID__r.infer3__Score_9__c,10,infer3__Score_Object_ID__r.infer3__Score_10__c,11,infer3__Score_Object_ID__r.infer3__Score_11__c,12,infer3__Score_Object_ID__r.infer3__Score_12__c,13,infer3__Score_Object_ID__r.infer3__Score_13__c,14,infer3__Score_Object_ID__r.infer3__Score_14__c,15,infer3__Score_Object_ID__r.infer3__Score_15__c,16,infer3__Score_Object_ID__r.infer3__Score_16__c,17,infer3__Score_Object_ID__r.infer3__Score_17__c,18,infer3__Score_Object_ID__r.infer3__Score_18__c,null),1+3*MOD(infer3__Score_Index__c,85),3),&apos;^&apos;,&apos; &apos;)))</formula>
        <label>Infer: Fit Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infer: Matched Account</description>
        <label>Infer: Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Infer: Matched Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Index__c</fullName>
        <label>Infer Score Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Object_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Score Object ID</label>
        <referenceTo>infer3__Score_Object__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead_Score_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Snapshot__c</fullName>
        <description>A saved copy of the score, if the &quot;Update Lead with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</description>
        <inlineHelpText>A saved copy of the score, if the &quot;Update Lead with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</inlineHelpText>
        <label>Infer Score Snapshot NOT FOR LAYOUT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_city__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_5__c</formula>
        <label>Infer: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_company_size__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_1__c</formula>
        <label>Infer: Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_competitors__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_29__c</formula>
        <label>Infer: Competitors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_country__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_10__c</formula>
        <label>Infer: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_email_type__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_7__c</formula>
        <label>Infer: Email Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_eloqua__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_25__c</formula>
        <label>Infer: Has Eloqua</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_hubspot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_28__c</formula>
        <label>Infer: Has Hubspot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_marketo__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_26__c</formula>
        <label>Infer: Has Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_pardot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_27__c</formula>
        <label>Infer: Has Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_ssl__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_18__c</formula>
        <label>Infer: Has SSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_revenue__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_3__c</formula>
        <label>Infer: Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_sector__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_4__c</formula>
        <label>Infer: Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_state__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_12__c</formula>
        <label>Infer: State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_uses_aws__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_19__c</formula>
        <label>Infer: Uses AWS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_website_rank__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_6__c</formula>
        <label>Infer: Website Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_zip__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_8__c</formula>
        <label>Infer: Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadfeederapp__LatestWebsiteVisit__c</fullName>
        <label>Latest Leadfeeder Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>leadfeederapp__LeadfeederLink__c</fullName>
        <label>View in Leadfeeder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mql_infer__c</fullName>
        <label>MQL Infer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sl_cadence_stage__c</fullName>
        <label>Cadence Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__LT_Info__c</fullName>
        <description>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</description>
        <inlineHelpText>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</inlineHelpText>
        <label>LT Info</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>Shows the current UTC timezone offset of the Lead. Uses the address information, and in its absence the Phone number field in the calculation.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Lead.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ALL_LEADS_ml2</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>infer3__Infer_Score__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>mql_infer__c</columns>
        <columns>Seats_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Organic,Paid Search,Direct Traffic,Website</value>
        </filters>
        <label>All Lead This Week_ml</label>
        <sharedTo>
            <role>Account_Executive_Americas</role>
            <role>Sales_Development_Representative</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.RATING</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>SAL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <label>All Contact Established Leads</label>
        <sharedTo>
            <role>Management</role>
            <role>Region_Leader_Americas</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Disqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>StageToSDLDate__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>SDL</value>
        </filters>
        <label>All Disqualified Leads</label>
        <sharedTo>
            <role>Account_Executive_Americas</role>
            <role>Account_Executive_Europe</role>
            <role>Customer_Service</role>
            <role>Development</role>
            <role>Growth</role>
            <role>Management</role>
            <role>Region_Leader_Americas</role>
            <role>Region_Leader_Europe</role>
            <role>Renewals</role>
            <role>Sales_Development_Representative</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Interested_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>StageToSALDate__c</columns>
        <columns>StatusToInterestedDate__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.RATING</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Interested</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>SAL</value>
        </filters>
        <label>All Interested Leads</label>
        <sharedTo>
            <role>Management</role>
            <role>Region_Leader_Americas</role>
            <role>Region_Leader_Europe</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Qualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Migration</value>
        </filters>
        <label>All Marketing Qualified Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Migration_Campaign_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Stage__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>tz__Local_Time_24_Short__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Migration</value>
        </filters>
        <label>All Migration Campaign Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Qualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.RATING</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>SQL</value>
        </filters>
        <label>All Qualified Leads</label>
        <sharedTo>
            <role>Management</role>
            <role>Region_Leader_Americas</role>
            <role>Region_Leader_Europe</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Rejected_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>StageToSRLDate__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>SRL</value>
        </filters>
        <label>All Rejected Leads</label>
        <sharedTo>
            <role>Account_Executive_Americas</role>
            <role>Account_Executive_Europe</role>
            <role>Customer_Service</role>
            <role>Development</role>
            <role>Growth</role>
            <role>Management</role>
            <role>Region_Leader_Americas</role>
            <role>Region_Leader_Europe</role>
            <role>Renewals</role>
            <role>Sales_Development_Representative</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unresponsive_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>StageToSALDate__c</columns>
        <columns>StatusToInterestedDate__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>HubSpot_Inc_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unresponsive</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>SAL</value>
        </filters>
        <label>All Unresponsive Leads</label>
        <sharedTo>
            <role>Management</role>
            <role>Region_Leader_Americas</role>
            <roleAndSubordinates>Region_Leader_Europe</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Lead_View</fullName>
        <booleanFilter>(1 OR 2) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cying</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Butle</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>msmit</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>shibb</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Chapm</value>
        </filters>
        <label>Central Lead View</label>
        <sharedTo>
            <group>Central_Lead_View</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Current_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>StageToMQLDate__c</columns>
        <columns>StatusLastUpdatedDate__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>infer3__Infer_Score__c</columns>
        <columns>infer3__Behavioral_Score__c</columns>
        <columns>infer3__Behavioral_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Butle,cying,cryst,msmit</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Nurture,Unresponsive,Converted,Dead,Purchased</value>
        </filters>
        <label>Current Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Demo_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Demo Request</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Bad Lead</value>
        </filters>
        <filters>
            <field>Created_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2018 12:00 AM</value>
        </filters>
        <label>Demo Leads</label>
    </listViews>
    <listViews>
        <fullName>Demo_Leads_Cody</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Demo Request</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Bad Lead</value>
        </filters>
        <filters>
            <field>Created_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2018 12:00 AM</value>
        </filters>
        <label>Demo Leads (Cody)</label>
    </listViews>
    <listViews>
        <fullName>Demo_Open_ml</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>infer3__Infer_Score__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>cloudamp__Referrer__c</columns>
        <columns>cloudamp__GA_Campaign__c</columns>
        <columns>cloudamp__Keyword__c</columns>
        <columns>cloudamp__Lead_Source_Type__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Seats_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Review Sites,Demo Request,Kayako Demo</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>backend</value>
        </filters>
        <label>Demo Open_ml</label>
    </listViews>
</CustomObject>